--- a/A-InventarioFondoedit/src/app/components/materiales-module/materiales-module.component.html
+++ b/A-InventarioFondoedit/src/app/components/materiales-module/materiales-module.component.html
@@ -145,7 +145,77 @@
     </tab>
 
     <tab heading="Entregas">
-      Basic content 2
+      <div class="card">
+
+        <div class="card-header">
+          <div class="row">
+            <div class="col-2">
+              <p class="ml-3 m-0">Material</p>
+            </div>
+
+            <div class="col-2">
+              <p class="m-0">Cantidad</p>
+            </div>
+
+            <div class="col-2">
+              <p class="m-0">Fecha</p>
+            </div>
+
+            <div class="col-2">
+              <p class="m-0">Persona Asignada</p>
+            </div>
+
+            <div class="col">
+              <button class="btn btn-info float-right" 
+              (click)="openAddEntregaDialog()">Añadir</button>
+            </div>
+          </div>
+        </div>
+
+        
+        <div class="card-body">
+
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item" 
+            *ngFor="let entrega of this.entregasService.entregas | 
+            paginate: { id:'third', itemsPerPage: 5, currentPage: p3 }">
+              <div class="row">
+                <div class="col-2">
+                  <p>{{entrega.material.nombre}}</p>
+                </div>
+    
+                <div class="col-2">
+                  <p class="m-0">{{entrega.cantidad}}</p>
+                </div>
+    
+                <div class="col-2">
+                    <p class="m-0">{{entrega.created_at}}</p>
+                </div>
+
+                <div class="col-2">
+                  <p class="m-0">{{entrega.persona}}</p>
+                </div>
+
+                <div class="col">
+                  <a class="float-right ml-4 text-secondary" (click)="onViewEntrega(entrega)"
+                  style="cursor:pointer;">
+                    <i class="fa fa-eye" aria-hidden="true"></i>
+                  </a>
+                </div>
+              </div>
+            </li>
+            
+          </ul>
+          
+        </div>
+
+        <div class="card-footer text-center">
+          <pagination-controls id="third" (pageChange)="p3 = $event"
+          previousLabel="Anterior"
+          nextLabel="Siguiente"></pagination-controls>
+        </div>
+        
+      </div>
 
 
 
