--- a/A-InventarioFondoedit/src/app/components/materiales-module/Entradas/entradas-form/entradas-form.component.html
+++ b/A-InventarioFondoedit/src/app/components/materiales-module/Entradas/entradas-form/entradas-form.component.html
@@ -20,7 +20,7 @@
         <div class="form-group">
           <div class="form-group">
     
-            <label for="exampleFormControlSelect1">Selecciona el entrada</label>
+            <label for="exampleFormControlSelect1">Selecciona el material</label>
             <select class="form-control"  id="exampleFormControlSelect1" 
             (change)="asignEntradaID($event.target.value)">
               <option selected="true" disabled="disabled">Seleccionar</option>
