--- a/A-InventarioFondoedit/src/app/components/materiales-module/Entregas/entregas-form/entregas-form.component.html
+++ b/A-InventarioFondoedit/src/app/components/materiales-module/Entregas/entregas-form/entregas-form.component.html
@@ -34,7 +34,7 @@
           <input required [(ngModel)]="entrega.cantidad" type="number" name="cantidad" 
           [disabled]="maxCantidad==0" #name="ngModel" id="cantidad" placeholder="Inserte la cantidad" class="form-control" min="1" max="{{maxCantidad}}">
           <small class="text-danger" *ngIf="entrega.cantidad>maxCantidad">
-            Supera a la cantidad disponible
+            Catidad Disponible {{maxCantidad}}
           </small>
           <small class="text-danger" *ngIf="entrega.cantidad<0">
             Numero invalido
