--- a/A-InventarioFondoedit/src/app/components/navbar/navbar.component.html
+++ b/A-InventarioFondoedit/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
 
       <div class="navbar-nav">
         <a class="nav-item nav-link" routerLink="materialesModule" *ngIf="loggedIn">Materiales</a>
-        <a class="nav-item nav-link" routerLink="">Publicaciones</a>
+        <a class="nav-item nav-link" routerLink="" *ngIf="loggedIn">Publicaciones</a>
       </div>
 
       <ul class="navbar-nav ml-auto">
