--- a/A-InventarioFondoedit/src/app/components/materiales-module/materiales-module.component.html
+++ b/A-InventarioFondoedit/src/app/components/materiales-module/materiales-module.component.html
@@ -1,9 +1,11 @@
 <div class="container mt-5">
 
+  <h3 class="">Inventario de materiales </h3>
+  <hr>
+
   <tabset>
 
     <tab heading="Materiales" id="tab1">
-
       <div class="card">
 
         <div class="card-header">
@@ -21,43 +23,39 @@
             </div>
 
             <div class="col">
-              <button class="btn btn-info float-right" 
-              (click)="openAddMaterialDialog()">Añadir</button>
+              <button class="btn btn-info float-right" (click)="openAddMaterialDialog()">Añadir</button>
             </div>
           </div>
         </div>
 
-        <div class="card-body" >
+        <div class="card-body">
 
           <ul class="list-group list-group-flush">
             <li class="list-group-item" *ngFor="let material of materialesService.materiales 
-            | paginate: { itemsPerPage: 5, currentPage: p, id: 'first'}">
+                | paginate: { itemsPerPage: 5, currentPage: p, id: 'first'}">
               <div class="row">
                 <div class="col-2">
                   <p>{{material.nombre}}</p>
                 </div>
-    
+
                 <div class="col-2">
                   <p class="m-0">{{material.cantidad}}</p>
                 </div>
-    
+
                 <div class="col-2">
-                    <p class="m-0">{{material.precio}} Bs.S</p>
+                  <p class="m-0">{{material.precio}} Bs.S</p>
                 </div>
 
                 <div class="col">
-                  <a class="float-right ml-4 text-danger" (click)="deleteMaterial(material.id)" 
-                  style="cursor:pointer;">
+                  <a class="float-right ml-4 text-danger" (click)="deleteMaterial(material.id)" style="cursor:pointer;">
                     <i class="far fa-trash-alt"></i>
                   </a>
-              
-                  <a class="float-right ml-4 text-secondary" (click)="onEdit(material)"
-                  style="cursor:pointer;" >
+
+                  <a class="float-right ml-4 text-secondary" (click)="onEdit(material)" style="cursor:pointer;">
                     <i class="far fa-edit"></i>
                   </a>
-              
-                  <a class="float-right ml-4 text-secondary" (click)="onViewMaterial(material)"
-                  style="cursor:pointer;">
+
+                  <a class="float-right ml-4 text-secondary" (click)="onViewMaterial(material)" style="cursor:pointer;">
                     <i class="fa fa-eye" aria-hidden="true"></i>
                   </a>
                 </div>
@@ -67,18 +65,17 @@
         </div>
 
         <div class="card-footer text-center">
-          <pagination-controls (pageChange)="p = $event" id="first"
-          previousLabel="Anterior"
-          nextLabel="Siguiente"></pagination-controls>
+          <pagination-controls (pageChange)="p = $event" id="first" previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
         </div>
 
       </div>
+
     </tab>
 
     <tab heading="Entradas">
       <div class="card">
 
-        
+
         <div class="card-header">
           <div class="row">
             <div class="col-2">
@@ -94,51 +91,46 @@
             </div>
 
             <div class="col">
-              <button class="btn btn-info float-right" 
-              (click)="openAddEntradaDialog()">Añadir</button>
+              <button class="btn btn-info float-right" (click)="openAddEntradaDialog()">Añadir</button>
             </div>
           </div>
         </div>
 
-        
+
         <div class="card-body">
 
           <ul class="list-group list-group-flush">
-            <li class="list-group-item" 
-            *ngFor="let entrada of this.entradasService.entradas | 
+            <li class="list-group-item" *ngFor="let entrada of this.entradasService.entradas | 
             paginate: { id:'second', itemsPerPage: 5, currentPage: p2 }">
               <div class="row">
                 <div class="col-2">
                   <p>{{entrada.material.nombre}}</p>
                 </div>
-    
+
                 <div class="col-2">
                   <p class="m-0">{{entrada.cantidad}}</p>
                 </div>
-    
+
                 <div class="col-2">
-                    <p class="m-0">{{entrada.created_at}}</p>
+                  <p class="m-0">{{entrada.created_at}}</p>
                 </div>
 
                 <div class="col">
-                  <a class="float-right ml-4 text-secondary" (click)="onViewMaterial(material)"
-                  style="cursor:pointer;">
+                  <a class="float-right ml-4 text-secondary" (click)="onViewMaterial(material)" style="cursor:pointer;">
                     <i class="fa fa-eye" aria-hidden="true"></i>
                   </a>
                 </div>
               </div>
             </li>
-            
+
           </ul>
-          
+
         </div>
 
         <div class="card-footer text-center">
-          <pagination-controls id="second" (pageChange)="p2 = $event"
-          previousLabel="Anterior"
-          nextLabel="Siguiente"></pagination-controls>
+          <pagination-controls id="second" (pageChange)="p2 = $event" previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
         </div>
-        
+
       </div>
 
 
@@ -166,30 +158,28 @@
             </div>
 
             <div class="col">
-              <button class="btn btn-info float-right" 
-              (click)="openAddEntregaDialog()">Añadir</button>
+              <button class="btn btn-info float-right" (click)="openAddEntregaDialog()">Añadir</button>
             </div>
           </div>
         </div>
 
-        
+
         <div class="card-body">
 
           <ul class="list-group list-group-flush">
-            <li class="list-group-item" 
-            *ngFor="let entrega of this.entregasService.entregas | 
+            <li class="list-group-item" *ngFor="let entrega of this.entregasService.entregas | 
             paginate: { id:'third', itemsPerPage: 5, currentPage: p3 }">
               <div class="row">
                 <div class="col-2">
                   <p>{{entrega.material.nombre}}</p>
                 </div>
-    
+
                 <div class="col-2">
                   <p class="m-0">{{entrega.cantidad}}</p>
                 </div>
-    
+
                 <div class="col-2">
-                    <p class="m-0">{{entrega.created_at}}</p>
+                  <p class="m-0">{{entrega.created_at}}</p>
                 </div>
 
                 <div class="col-2">
@@ -197,24 +187,21 @@
                 </div>
 
                 <div class="col">
-                  <a class="float-right ml-4 text-secondary" (click)="onViewEntrega(entrega)"
-                  style="cursor:pointer;">
+                  <a class="float-right ml-4 text-secondary" (click)="onViewEntrega(entrega)" style="cursor:pointer;">
                     <i class="fa fa-eye" aria-hidden="true"></i>
                   </a>
                 </div>
               </div>
             </li>
-            
+
           </ul>
-          
+
         </div>
 
         <div class="card-footer text-center">
-          <pagination-controls id="third" (pageChange)="p3 = $event"
-          previousLabel="Anterior"
-          nextLabel="Siguiente"></pagination-controls>
+          <pagination-controls id="third" (pageChange)="p3 = $event" previousLabel="Anterior" nextLabel="Siguiente"></pagination-controls>
         </div>
-        
+
       </div>
 
 
