--- a/A-InventarioFondoedit/src/app/components/navbar/navbar.component.html
+++ b/A-InventarioFondoedit/src/app/components/navbar/navbar.component.html
@@ -13,12 +13,12 @@
       <ul class="navbar-nav ml-auto">
 
         <li class="nav-item">
-            <a class="nav-item nav-link" routerLink="profile" *ngIf="loggedIn">Profile</a>
+            <a class="nav-item nav-link" routerLink="profile" *ngIf="loggedIn">Perfil</a>
         </li>
 
         <li class="nav-item">
             <a class="nav-item nav-link" routerLink="login" *ngIf="!loggedIn">Login</a>
-            <a class="nav-item nav-link" href="#" (click)="logout($event)" *ngIf="loggedIn">Logout</a>
+            <a class="nav-item nav-link" href="#" (click)="logout($event)" *ngIf="loggedIn">Cerrar Sesión</a>
         </li>
         
       </ul>
